--- a/public/suche.html
+++ b/public/suche.html
@@ -23,7 +23,7 @@
       }
     }
     </style>
-    <div id="navDiv">
+    <div id="navDiv" class="blue">
 
     
     </div>
@@ -63,6 +63,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
     <script src="./globalfunction.js"></script>
     <!--<script src="./meine_JS/serverhandler.js"></script>-->
-    <script src="./index.js"></script>
+    <script src="./suche.js"></script>
   </body>
 </html>
