--- a/public/testhinz.html
+++ b/public/testhinz.html
@@ -77,6 +77,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
     <script src="./globalfunction.js"></script>
     <!--<script src="./meine_JS/serverhandler.js"></script>-->
-    <script src="./index.js"></script>
+    <script src="./testhinz.js"></script>
   </body>
 </html>
