Einbauen der Datenbankabfragen

--- a/public/index.html
+++ b/public/index.html
@@ -34,62 +34,9 @@
       </div>
     </div>
   <div class='container'>
-    <div class = 'col'>
-     <ul id='dropdownKlasse' class='dropdown-content'>
-            <table>
-                    <tbody>
-                      <tr>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">1AHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">1BHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">1CHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">1DHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">1AHMEA</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">1BHMEA</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">1AHET</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">1AFEL</a></td>
-                      </tr>
-                      <tr>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">2AHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">2BHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">2CHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">2DHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">2AHMEA</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">2BHMEA</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">2AHET</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">2AFEL</a></td>
-                      </tr>
-                      <tr>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">3AHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">3BHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">3CHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">3DHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">3AHMEA</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">3BHMEA</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">3AHET</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">3AFEL</a></td>
-                      </tr>
-                      <tr>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">4AHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">4BHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">4CHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">4DHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">4AHMEA</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">4BHMEA</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">4AHET</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">4AFEL</a></td>
-                    </tr>
-                    <tr>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">5AHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">5BHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">5CHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">5DHELS</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">5AHMEA</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">5BHMEA</a></td>
-                        <td><li><a onclick="klassepressed(this)" href="#klasse">5AHET</a></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                
+    <div id = "klassenliste" class = 'col'>
+    <ul id='dropdownKlasse' class='dropdown-content'>
+      
     </ul>
   </div>
 </div>
