Test und Ergebnisse hinzufügen funktioniert

--- a/public/testhinz.html
+++ b/public/testhinz.html
@@ -46,6 +46,12 @@
       </div>
     </div>
     <div class="row">
+      <div class="input-field col s12">
+          <input id="typ" type="text" class="validate">
+          <label for="typ">Typ</label>
+      </div>
+  </div>
+    <div class="row">
         <div class="input-field col s12">
             <input id="fach" type="text" class="validate">
             <label for="fach">Fach</label>
@@ -75,9 +81,6 @@
       </div>
     </form>
   </div>
-
-  
-    
 
     <div id="TestTabelle"></div>
 
